--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="./Images/ICON.ico">
     <script src="https://kit.fontawesome.com/a63870dc57.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <section class="hero">
         <div class="navbar">
-            <header>
                 <nav>
                     <ul class="nav_links">
                         <li><a href="#projects_section">Projects</a></li>
@@ -21,7 +21,6 @@
                         <li><a href="#contact_section">Contact</a></li>
                     </ul>
                 </nav>
-            </header>
         </div>
         <div class="landing-page">
             <div class="page-content">
@@ -45,7 +44,7 @@
                     <h1>Pokedex</h1>
                     <p>Simple Pokedex app using Node.js, bootstrap, and the PokeAPI. App will make an async call to the
                         API and return the image of the pokemon, as well as the name.</p>
-                    <a href="https://jessy-pokedex.herokuapp.com/" class="cta">View Details</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://jessy-pokedex.herokuapp.com/" class="cta">View Details</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="Images/pokedex-screenshot.png" target="_blank" alt="project screenshot" />
@@ -61,7 +60,7 @@
                     <p>Clicking the button will generate a random quote from the TV show the simpsons. Alongside the
                         quote, the image of the character who said it will be displayed. Due to API limitations,
                         requests are occassionaly denied. An error message will be shown in that scenario.</p>
-                    <a href="#" class="cta">View Details</a>
+                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Details</a>
                 </div>
             </div>
             <div class="portfolio-item">
@@ -69,7 +68,7 @@
                     <h6>FLUTTER / DART</h6>
                     <h1>Instagram Mobile Redesign</h1>
                     <p>Reimaging of the instagram homepage using flutter and dart. </p>
-                    <a href="#" class="cta">View Details</a>
+                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Details</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
