skills section overhaul underway

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <section class="hero">
         <div class="navbar">
-                <nav>
-                    <ul class="nav_links">
-                        <li><a href="#projects_section">Projects</a></li>
-                        <li><a href="#skills_section">Skills</a></li>
-                        <li><a href="#contact_section">Contact</a></li>
-                    </ul>
-                </nav>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="#projects_section">Projects</a></li>
+                    <li><a href="#skills_section">Skills</a></li>
+                    <li><a href="#contact_section">Contact</a></li>
+                </ul>
+            </nav>
         </div>
         <div class="landing-page">
             <div class="page-content">
@@ -29,7 +29,7 @@
                     Full Stack Web Developer
 
                 </p>
-                <a href="#skills">Learn More</a>
+                <a href="mailto:jessy@jessymangat.com">Get in Touch</a>
             </div>
         </div>
         </div>
@@ -44,7 +44,8 @@
                     <h1>Pokedex</h1>
                     <p>Simple Pokedex app using Node.js, bootstrap, and the PokeAPI. App will make an async call to the
                         API and return the image of the pokemon, as well as the name.</p>
-                    <a target="_blank" rel="noopener noreferrer" href="https://jessy-pokedex.herokuapp.com/" class="cta">View Details</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://jessy-pokedex.herokuapp.com/"
+                        class="cta">View Details</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="Images/pokedex-screenshot.png" target="_blank" alt="project screenshot" />
@@ -77,97 +78,83 @@
         </div>
     </section>
     <section id="skills_section" class="skills_section">
-        <div class="inner-width">
-            <h1 class="section-title">Skills</h1>
-            <div class="border"></div>
-            <div class="services-container">
+        <div class="flex-grid">
+            <div class="column">
+                <h2>Front End</h2>
+            </div>
+            <div class="column">
+                <h2>Back End</h2>
 
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fab fa-html5"></i>
-                    </div>
-                    <div class="service-title">HTML</div>
-                    <div class="service-desc">
-                        Comfortable builiding websites from scratch using HTML / CSS / Javascript.
-                        Proficient with frameworks such as bootstrap and foundation.
-                    </div>
-                </div>
+            </div>
+            <div class="column">
+                <h2>Tools</h2>
 
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fab fa-css3-alt"></i>
-                    </div>
-                    <div class="service-title">CSS</div>
-                    <div class="service-desc">
-                        Able to style with vanilla CSS3 or with the css preprocessors Less and Sass.
-                    </div>
-                </div>
-
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fab fa-js-square"></i>
-                    </div>
-                    <div class="service-title">Javascript</div>
-                    <div class="service-desc">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore tenetur, voluptate et
-                        architecto repellendus illum in officiis sapiente aperiam blanditiis, quos quia quis hic?
-                        Eligendi voluptates molestias alias ratione ullam.
-                    </div>
-                </div>
-
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fab fa-docker"></i>
-                    </div>
-                    <div class="service-title">Docker</div>
-                    <div class="service-desc">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum recusandae, veniam omnis minima
-                        iure repellendus quis qui nulla, error incidunt iusto ut dolorum vitae dolorem culpa, provident
-                        temporibus. Est, deleniti.
-                    </div>
-                </div>
-
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fab fa-aws"></i>
-                    </div>
-                    <div class="service-title">AWS / GCP</div>
-                    <div class="service-desc">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ullam quia voluptatem
-                        asperiores. Reiciendis, saepe. Explicabo harum blanditiis ipsam deserunt cumque, minus
-                        repellendus nostrum, reprehenderit optio eligendi facere, accusamus sapiente.
-                    </div>
-                </div>
-
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fas fa-database"></i>
-                    </div>
-                    <div class="service-title">MySql / NoSql</div>
-                    <div class="service-desc">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius iusto suscipit, libero
-                        et at laborum eveniet aperiam eum praesentium numquam excepturi mollitia, asperiores eaque natus
-                        alias fuga vitae. Adipisci.
-                    </div>
-                </div>
             </div>
         </div>
+        <div class="flex-grid">
+            <div class="column">
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-css3-alt"></i>
+            </div>
+            <div class="column">
+                <i class="fab fa-node-js"></i>
+                <i class="fas fa-database"></i>
+            </div>
+            <div class="column">
+                <i class="fab fa-figma"></i>
+                <i class="fab fa-github-square"></i>
+            </div>
+            </div>
+
+            <div class="flex-grid">
+                <div class="column">
+                    <i class="fab fa-bootstrap"></i>
+                    <i class="fab fa-sass"></i>
+                </div>
+                <div class="column">
+                    <i class="fab fa-docker"></i>
+                    <i class="fab fa-github-square"></i>
+                </div>
+                <div class="column">
+                    <i class="fab fa-github-square"></i>
+                    <i class="fab fa-github-square"></i>
+                </div>
+                </div>
+
+                <div class="flex-grid">
+                    <div class="column">
+                        <i class="fab fa-react"></i>
+                        <i class="fab fa-less"></i>
+                    </div>
+                    <div class="column">
+                        <i class="fab fa-github-square"></i>
+                        <i class="fab fa-github-square"></i>
+                    </div>
+                    <div class="column">
+                        <i class="fab fa-github-square"></i>
+                        <i class="fab fa-github-square"></i>
+                    </div>
+                    </div>
     </section>
     <section id="contact_section" class="contact_section">
-            <ul class="social-icons">
-              <li>
+        <ul class="social-icons">
+            <li>
                 <a href="mailto:jessy@jessymangat.com"><i class="fa fa-envelope"></i></a>
-              </li>
-              <li>
+            </li>
+            <li>
                 <a href="https://github.com/JessyMangat"><i class="fab fa-github-square"></i></a>
-              </li>
-              <li>
+            </li>
+            <li>
                 <a href="https://www.reddit.com/user/JessyMangat"><i class="fab fa-reddit-square"></i></a>
-              </li>
-              <li>
+            </li>
+            <li>
                 <a href="https://codepen.io/jessymangat/pens/public"><i class="fab fa-codepen"></i></a>
-              </li>
-            </ul>
+            </li>
+            <li>
+                <a href="https://dribbble.com/JessyMangat"><i class="fab fa-dribbble"></i></a>
+            </li>
+        </ul>
+        <h6>Designed and Developed by Jessy Mangat &copy; 2020</h6>
     </section>
 
 </body>
