removed skills for rework. Added contact

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right">
-                    <img src="Images/simpsons-screenshot.png" alt="project screenshot" />
+                    <img src="Images/portitem3.jpeg" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
                     <h6>HTML / CSS / JAVASCRIPT / THESIMPSONSQUOTEAPI</h6>
@@ -78,65 +78,22 @@
         </div>
     </section>
     <section id="skills_section" class="skills_section">
-        <div class="flex-grid">
-            <div class="column">
-                <h2>Front End</h2>
-            </div>
-            <div class="column">
-                <h2>Back End</h2>
-
-            </div>
-            <div class="column">
-                <h2>Tools</h2>
-
-            </div>
-        </div>
-        <div class="flex-grid">
-            <div class="column">
-                <i class="fab fa-html5"></i>
-                <i class="fab fa-css3-alt"></i>
-            </div>
-            <div class="column">
-                <i class="fab fa-node-js"></i>
-                <i class="fas fa-database"></i>
-            </div>
-            <div class="column">
-                <i class="fab fa-figma"></i>
-                <i class="fab fa-github-square"></i>
-            </div>
-            </div>
-
-            <div class="flex-grid">
-                <div class="column">
-                    <i class="fab fa-bootstrap"></i>
-                    <i class="fab fa-sass"></i>
-                </div>
-                <div class="column">
-                    <i class="fab fa-docker"></i>
-                    <i class="fab fa-github-square"></i>
-                </div>
-                <div class="column">
-                    <i class="fab fa-github-square"></i>
-                    <i class="fab fa-github-square"></i>
-                </div>
-                </div>
-
-                <div class="flex-grid">
-                    <div class="column">
-                        <i class="fab fa-react"></i>
-                        <i class="fab fa-less"></i>
-                    </div>
-                    <div class="column">
-                        <i class="fab fa-github-square"></i>
-                        <i class="fab fa-github-square"></i>
-                    </div>
-                    <div class="column">
-                        <i class="fab fa-github-square"></i>
-                        <i class="fab fa-github-square"></i>
-                    </div>
-                    </div>
+        <h1 class="section-title">Skills</h1>
+            <div class="border"></div>
     </section>
     <section id="contact_section" class="contact_section">
+        <h1 class="section-title">Get in Touch</h1>
+            <div class="border"></div>
+        <form class="contact-form" action="index.html" method="POST" data-netlify="true">
+            <input type="text" class="contact-form-text" placeholder="Full Name">
+            <input type="email" class="contact-form-text" placeholder="Email">
+            <input type="text" class="contact-form-text" placeholder="Organization">
+            <textarea class="contact-form-text" placeholder="Your message"></textarea>
+            <input type="submit" class="contact-form-btn" value="Send">
+          </form>
+    </section>
+
+<section id="footer" class="footer">
         <ul class="social-icons">
             <li>
                 <a href="mailto:jessy@jessymangat.com"><i class="fa fa-envelope"></i></a>
