edited color scheme on svg files

--- a/index.html
+++ b/index.html
@@ -79,8 +79,38 @@
     </section>
     <section id="skills_section" class="skills_section">
         <h1 class="section-title">Skills</h1>
-            <div class="border"></div>
+        <div class="border"></div>
+            <div class="skills">
+                <div class="skill_category">
+                    <h1>Front End</h1>
+                    <img src="./Images/SVG Icons/html.svg"/>
+                    <img src="./Images/SVG Icons/react.svg"/>
+                    <img src="./Images/SVG Icons/css.svg"/>
+                    <img src="./Images/SVG Icons/bootstrap.svg"/>
+                    <img src="./Images/SVG Icons/sass.svg"/>
+                    <img src="./Images/SVG Icons/sass.svg"/>
+                </div>
+                <div class="skill_category">
+                    <h1>Tools</h1>
+                    <img src="./Images/SVG Icons/docker.svg"/>
+                    <img src="./Images/SVG Icons/figma.svg"/>
+                    <img src="./Images/SVG Icons/gcp.svg"/>
+                    <img src="./Images/SVG Icons/github.svg"/>
+                    <img src="./Images/SVG Icons/postman.svg"/>
+                    <img src="./Images/SVG Icons/aws.svg"/>
+                </div>
+                <div class="skill_category">
+                    <h1>Back End</h1>
+                    <img src="Images/SVG Icons/express.svg"/>
+                    <img src="./Images/SVG Icons/mongodb.svg"/>
+                    <img src="./Images/SVG Icons/mysql.svg"/>
+                    <img src="./Images/SVG Icons/mysql.svg"/>
+                    <img src="./Images/SVG Icons/nodejs.svg"/>
+                    <img src="./Images/SVG Icons/nodejs.svg"/>
+                </div>
+            </div>
     </section>
+   
     <section id="contact_section" class="contact_section">
         <h1 class="section-title">Get in Touch</h1>
             <div class="border"></div>
@@ -89,7 +119,7 @@
             <input type="email" class="contact-form-text" placeholder="Email">
             <input type="text" class="contact-form-text" placeholder="Organization">
             <textarea class="contact-form-text" placeholder="Your message"></textarea>
-            <input type="submit" class="contact-form-btn" value="Send">
+            <input type="submit" class="contact-form-btn" value="Submit">
           </form>
     </section>
 
