non-responsive skills section complete

--- a/index.html
+++ b/index.html
@@ -82,31 +82,46 @@
         <div class="border"></div>
             <div class="skills">
                 <div class="skill_category">
-                    <h1>Front End</h1>
                     <img src="./Images/SVG Icons/html.svg"/>
                     <img src="./Images/SVG Icons/react.svg"/>
+                    <h5>HTML5</h5>
+                    <h5>React.js</h5>
                     <img src="./Images/SVG Icons/css.svg"/>
                     <img src="./Images/SVG Icons/bootstrap.svg"/>
+                    <h5>CSS3</h5>
+                    <h5>Bootstrap</h5>
                     <img src="./Images/SVG Icons/sass.svg"/>
                     <img src="./Images/SVG Icons/sass.svg"/>
+                    <h5>Sass</h5>
+                    <h5>Less</h5>
                 </div>
-                <div class="skill_category">
-                    <h1>Tools</h1>
-                    <img src="./Images/SVG Icons/docker.svg"/>
+                <div class="skill_category">   
+                    <img src="./Images/SVG Icons/photoshop.svg"/>
                     <img src="./Images/SVG Icons/figma.svg"/>
+                    <h5>Photoshop</h5>
+                    <h5>Figma</h5>
                     <img src="./Images/SVG Icons/gcp.svg"/>
                     <img src="./Images/SVG Icons/github.svg"/>
+                    <h5>GCP</h5>
+                    <h5>Github</h5>
                     <img src="./Images/SVG Icons/postman.svg"/>
                     <img src="./Images/SVG Icons/aws.svg"/>
+                    <h5>Postman</h5>
+                    <h5>AWS</h5>
                 </div>
                 <div class="skill_category">
-                    <h1>Back End</h1>
                     <img src="Images/SVG Icons/express.svg"/>
                     <img src="./Images/SVG Icons/mongodb.svg"/>
+					<h5>Express.js</h5>
+                    <h5>MongoDB</h5>
+                    <img src="./Images/SVG Icons/docker.svg"/>
                     <img src="./Images/SVG Icons/mysql.svg"/>
-                    <img src="./Images/SVG Icons/mysql.svg"/>
+					<h5>Docker</h5>
+                    <h5>MySql</h5>
                     <img src="./Images/SVG Icons/nodejs.svg"/>
                     <img src="./Images/SVG Icons/nodejs.svg"/>
+					<h5>Node.js</h5>
+                    <h5>TBD</h5>
                 </div>
             </div>
     </section>
@@ -126,19 +141,19 @@
 <section id="footer" class="footer">
         <ul class="social-icons">
             <li>
-                <a href="mailto:jessy@jessymangat.com"><i class="fa fa-envelope"></i></a>
+                <a href="mailto:jessy@jessymangat.com" target="_blank"><i class="fa fa-envelope"></i></a>
             </li>
             <li>
-                <a href="https://github.com/JessyMangat"><i class="fab fa-github-square"></i></a>
+                <a href="https://github.com/JessyMangat" target="_blank"><i class="fab fa-github-square"></i></a>
             </li>
             <li>
-                <a href="https://www.reddit.com/user/JessyMangat"><i class="fab fa-reddit-square"></i></a>
+                <a href="https://www.reddit.com/user/JessyMangat" target="_blank"><i class="fab fa-reddit-square"></i></a>
             </li>
             <li>
-                <a href="https://codepen.io/jessymangat/pens/public"><i class="fab fa-codepen"></i></a>
+                <a href="https://codepen.io/jessymangat/pens/public" target="_blank"><i class="fab fa-codepen"></i></a>
             </li>
             <li>
-                <a href="https://dribbble.com/JessyMangat"><i class="fab fa-dribbble"></i></a>
+                <a href="https://dribbble.com/JessyMangat" target="_blank"><i class="fab fa-dribbble"></i></a>
             </li>
         </ul>
         <h6>Designed and Developed by Jessy Mangat &copy; 2020</h6>
