responsive skills section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="border"></div>
             <div class="portfolio-item">
                 <div class="portfolio-description has-margin-right">
-                    <h6>NODE.JS / BOOTSTRAP / POKEAPI</h6>
+                    <h6>NODE.JS | BOOTSTRAP | POKEAPI</h6>
                     <h1>Pokedex</h1>
                     <p>Simple Pokedex app using Node.js, bootstrap, and the PokeAPI. App will make an async call to the
                         API and return the image of the pokemon, as well as the name.</p>
@@ -56,17 +56,17 @@
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
-                    <h6>HTML / CSS / JAVASCRIPT / THESIMPSONSQUOTEAPI</h6>
+                    <h6>HTML | CSS | JS | THESIMPSONSQUOTEAPI</h6>
                     <h1>Simpsons Quote Generator</h1>
                     <p>Clicking the button will generate a random quote from the TV show the simpsons. Alongside the
                         quote, the image of the character who said it will be displayed. Due to API limitations,
-                        requests are occassionaly denied. An error message will be shown in that scenario.</p>
+                        requests are occasionally denied. An error message will be shown in that scenario.</p>
                     <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Details</a>
                 </div>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-description has-margin-right">
-                    <h6>FLUTTER / DART</h6>
+                    <h6>FLUTTER | DART</h6>
                     <h1>Instagram Mobile Redesign</h1>
                     <p>Reimaging of the instagram homepage using flutter and dart. </p>
                     <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Details</a>
