--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1 class="section-title">Projects</h1>
             <div class="border"></div>
             <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right">
+                <div class="portfolio-description left-column">
                     <h6>NODE.JS | BOOTSTRAP | POKEAPI</h6>
                     <h1>Pokedex</h1>
                     <p>Simple Pokedex app using Node.js, bootstrap, and the PokeAPI. App will make an async call to the
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right">
+                <div class="portfolio-img left-column">
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right">
+                <div class="portfolio-description left-column">
                     <h6>FLUTTER | DART</h6>
                     <h1>Instagram Mobile Redesign</h1>
                     <p>Reimaging of the instagram homepage using flutter and dart. </p>
@@ -129,12 +129,12 @@
     <section id="contact_section" class="contact_section">
         <h1 class="section-title">Get in Touch</h1>
             <div class="border"></div>
-        <form class="contact-form" action="index.html" method="POST" data-netlify="true">
-            <input type="text" class="contact-form-text" placeholder="Full Name">
-            <input type="email" class="contact-form-text" placeholder="Email">
-            <input type="text" class="contact-form-text" placeholder="Organization">
-            <textarea class="contact-form-text" placeholder="Your message"></textarea>
-            <input type="submit" class="contact-form-btn" value="Submit">
+        <form name="contact" class="contact-form" action="index.html" method="POST" data-netlify="true">
+            <label>Full Name<input type="text" class="contact-form-text" placeholder="Full Name"/></label>
+            <label>Email<input type="email" class="contact-form-text" placeholder="Email"/></label>
+            <label>Organization<input type="text" class="contact-form-text" placeholder="Organization"/></label>
+            <label>Your Message<textarea class="contact-form-text" placeholder="Your message"/></textarea></label>
+            <input type="submit" class="contact-form-btn" value="Submit"/>
           </form>
     </section>
 
