NOW form is fixed

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         <h1 class="section-title">Get in Touch</h1>
             <div class="border"></div>
         <form name="contact" class="contact-form" action="index.html" method="POST" data-netlify="true">
-            <label>Full Name<input type="text" class="contact-form-text" placeholder="Full Name"/></label>
-            <label>Email<input type="email" class="contact-form-text" placeholder="Email"/></label>
-            <label>Organization<input type="text" class="contact-form-text" placeholder="Organization"/></label>
-            <label>Your Message<textarea class="contact-form-text" placeholder="Your message"/></textarea></label>
-            <input type="submit" class="contact-form-btn" value="Submit"/>
+            <input type="text" name="Full Name" class="contact-form-text" placeholder="Full Name"/>
+            <input type="email" name="Email" class="contact-form-text" placeholder="Email"/>
+            <input type="text" name="Company / Organization" class="contact-form-text" placeholder="Company / Organization"/>
+            <textarea name="Message" class="contact-form-text" placeholder="Your message"></textarea>
+            <input type="submit" name="Submit" class="contact-form-btn" value="Submit"/>
           </form>
     </section>
 
