smooth scroll to anchor

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p>Simple Pokedex app using Node.js, bootstrap, and the PokeAPI. App will make an async call to the
                         API and return the image of the pokemon, as well as the name.</p>
                     <a target="_blank" rel="noopener noreferrer" href="https://jessy-pokedex.herokuapp.com/"
-                        class="cta">View Details</a>
+                        class="cta">View Demo</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="Images/pokedex-screenshot.png" target="_blank" alt="project screenshot" />
@@ -56,12 +56,12 @@
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
-                    <h6>HTML | CSS | JS | THESIMPSONSQUOTEAPI</h6>
+                    <h6>HTML | CSS | JS | SIMPSONSQUOTEAPI</h6>
                     <h1>Simpsons Quote Generator</h1>
                     <p>Clicking the button will generate a random quote from the TV show the simpsons. Alongside the
                         quote, the image of the character who said it will be displayed. Due to API limitations,
                         requests are occasionally denied. An error message will be shown in that scenario.</p>
-                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Details</a>
+                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Demo</a>
                 </div>
             </div>
             <div class="portfolio-item">
@@ -69,7 +69,7 @@
                     <h6>FLUTTER | DART</h6>
                     <h1>Instagram Mobile Redesign</h1>
                     <p>Reimaging of the instagram homepage using flutter and dart. </p>
-                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Details</a>
+                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Demo</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
@@ -130,10 +130,10 @@
         <h1 class="section-title">Get in Touch</h1>
             <div class="border"></div>
         <form name="contact" class="contact-form" action="index.html" method="POST" data-netlify="true">
-            <input type="text" name="Full Name" class="contact-form-text" placeholder="Full Name"/>
-            <input type="email" name="Email" class="contact-form-text" placeholder="Email"/>
-            <input type="text" name="Company / Organization" class="contact-form-text" placeholder="Company / Organization"/>
-            <textarea name="Message" class="contact-form-text" placeholder="Your message"></textarea>
+            <input type="text" name="Full Name:" class="contact-form-text" placeholder="Full Name"/>
+            <input type="email" name="Email:" class="contact-form-text" placeholder="Email"/>
+            <input type="text" name="Company:" class="contact-form-text" placeholder="Company / Organization"/>
+            <textarea name="Message: " class="contact-form-text" placeholder="Your message"></textarea>
             <input type="submit" name="Submit" class="contact-form-btn" value="Submit"/>
           </form>
     </section>
