minor style changes

--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                     <h6>HTML | CSS | JS | SIMPSONSQUOTEAPI</h6>
                     <h1>Simpsons Quote Generator</h1>
                     <p>Clicking the button will generate a random quote from the TV show the simpsons. Alongside the
-                        quote, the image of the character who said it will be displayed. Due to API limitations,
-                        requests are occasionally denied. An error message will be shown in that scenario.</p>
-                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Demo</a>
+                        quote, the image of the character who said it will be displayed.</p>
+                    <a target="_blank" rel="noopener noreferrer" href="#" class="cta">View Demo</a>
                 </div>
             </div>
             <div class="portfolio-item">
@@ -69,7 +68,7 @@
                     <h6>FLUTTER | DART</h6>
                     <h1>Instagram Mobile Redesign</h1>
                     <p>Reimaging of the instagram homepage using flutter and dart. </p>
-                    <a target="_blank" rel="noopener noreferrer" href="google.com" class="cta">View Demo</a>
+                    <a target="_blank" rel="noopener noreferrer" href="#" class="cta">View Demo</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
@@ -91,9 +90,9 @@
                     <h5>CSS3</h5>
                     <h5>Bootstrap</h5>
                     <img src="./Images/SVG Icons/sass.svg"/>
-                    <img src="./Images/SVG Icons/sass.svg"/>
+                    <img src="./Images/SVG Icons/javascript.svg"/>
                     <h5>Sass</h5>
-                    <h5>Less</h5>
+                    <h5>Javascript</h5>
                 </div>
                 <div class="skill_category">   
                     <img src="./Images/SVG Icons/photoshop.svg"/>
@@ -119,9 +118,9 @@
 					<h5>Docker</h5>
                     <h5>MySql</h5>
                     <img src="./Images/SVG Icons/nodejs.svg"/>
-                    <img src="./Images/SVG Icons/nodejs.svg"/>
+                    <img src="./Images/SVG Icons/php.svg"/>
 					<h5>Node.js</h5>
-                    <h5>TBD</h5>
+                    <h5>PHP</h5>
                 </div>
             </div>
     </section>
@@ -139,6 +138,7 @@
     </section>
 
 <section id="footer" class="footer">
+    <footer>
         <ul class="social-icons">
             <li>
                 <a href="mailto:jessy@jessymangat.com" target="_blank"><i class="fa fa-envelope"></i></a>
@@ -157,6 +157,7 @@
             </li>
         </ul>
         <h6>Designed and Developed by Jessy Mangat &copy; 2020</h6>
+        </footer>
     </section>
 
 </body>
