--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
         </div>
     </section>
     <section id="projects_section" class="projects_section">
-        <div class="projects-container">
             <h1 class="section-title">Projects</h1>
             <div class="border"></div>
-            <div class="portfolio-item">
-                <div class="portfolio-description left-column">
+            <div class="portfolio-item odd-item">
+                <div class="portfolio-description">
                     <h6>NODE.JS | BOOTSTRAP | POKEAPI</h6>
                     <h1>Pokedex</h1>
                     <p>Simple Pokedex app using Node.js, bootstrap, and the PokeAPI. App will make an async call to the
@@ -52,7 +51,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img left-column">
+                <div class="portfolio-img">
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
@@ -63,18 +62,17 @@
                     <a target="_blank" rel="noopener noreferrer" href="#" class="cta">View Demo</a>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <div class="portfolio-description left-column">
+            <div class="portfolio-item odd-item">
+                <div class="portfolio-description">
                     <h6>FLUTTER | DART</h6>
                     <h1>Instagram Mobile Redesign</h1>
-                    <p>Reimaging of the instagram homepage using flutter and dart. </p>
+                    <p>Reimaging of the instagram homepage using flutter and dart. This project will be replaced with something more relevant. </p>
                     <a target="_blank" rel="noopener noreferrer" href="#" class="cta">View Demo</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="Images/portitem3.jpeg" alt="project screenshot" />
                 </div>
             </div>
-        </div>
     </section>
     <section id="skills_section" class="skills_section">
         <h1 class="section-title">Skills</h1>
