updated link + image for project 2

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img">
-                    <img src="Images/portitem3.jpeg" alt="project screenshot" />
+                    <img src="Images/simpsons-screenshot.png" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
-                    <h6>HTML | CSS | JS | SIMPSONSQUOTEAPI</h6>
+                    <h6>REACT | CSS | SIMPSONSQUOTEAPI</h6>
                     <h1>Simpsons Quote Generator</h1>
                     <p>Clicking the button will generate a random quote from the TV show the simpsons. Alongside the
                         quote, the image of the character who said it will be displayed.</p>
-                    <a target="_blank" rel="noopener noreferrer" href="#" class="cta">View Demo</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://simpsons-quotes.jessymangat.com" class="cta">View Demo</a>
                 </div>
             </div>
             <div class="portfolio-item odd-item">
