--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             </div>
             <div class="portfolio-item odd-item">
                 <div class="portfolio-description">
-                    <h6>FLUTTER | DART</h6>
-                    <h1>Instagram Mobile Redesign</h1>
-                    <p>Reimaging of the instagram homepage using flutter and dart. This project will be replaced with something more relevant. </p>
-                    <a target="_blank" rel="noopener noreferrer" href="#" class="cta">View Demo</a>
+                    <h6>EXPRESS | REACT | MYSQL</h6>
+                    <h1>Electronic Medical Record API</h1>
+                    <p>EMR system designed with react, express, and MySQL. Worked on by three devs. My role was to build the API with express.  </p>
+                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/JessyMangat/emr-api" class="cta">View Repo</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="Images/portitem3.jpeg" alt="project screenshot" />
+                    <img src="Images/emr-screenshot.png" alt="project screenshot" />
                 </div>
             </div>
     </section>
