updated image and descriptions

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
                     <img src="Images/simpsons-screenshot.png" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
-                    <h6>REACT | CSS | SIMPSONSQUOTEAPI</h6>
+                    <h6>REACT | CSS | SIMPSONSQUOTEAPI | FRINKIAC API</h6>
                     <h1>Simpsons Quote Generator</h1>
-                    <p>Clicking the button will generate a random quote from the TV show the simpsons. Alongside the
-                        quote, the image of the character who said it will be displayed.</p>
+                    <p>React App that will generate a random quote from the TV show The Simpsons. Alongside the quote a character image and the episode information will be displayed. The button to view a 3 second gif of the quote clip is also available.</p>
                     <a target="_blank" rel="noopener noreferrer" href="https://simpsons-quotes.jessymangat.com" class="cta">View Demo</a>
                 </div>
             </div>
