update social links

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <a href="https://github.com/JessyMangat" target="_blank"><i class="fab fa-github-square"></i></a>
             </li>
             <li>
-                <a href="https://www.reddit.com/user/JessyMangat" target="_blank"><i class="fab fa-reddit-square"></i></a>
+                <a href="https://www.linkedin.com/in/jessy-mangat-0a32981a6/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </li>
             <li>
                 <a href="https://codepen.io/jessymangat/pens/public" target="_blank"><i class="fab fa-codepen"></i></a>
