--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
                     <img src="Images/emr-screenshot.png" alt="project screenshot" />
                 </div>
             </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img">
+                    <img src="Images/weather-screenshot.jpg" alt="project screenshot" />
+                </div>
+                <div class="portfolio-description">
+                    <h6>REACT.JS | BOOTSTRAP | DARKSKY API | GOOGLE PLACES API</h6>
+                    <h1>React Musical Weather App</h1>
+                    <p>Weather app that will play music dependant on the weather. It uses the darksky weather api as well as the Google places API. API changes have caused the app to not function correctly. A fix is currently underway and should be deployed in a few days. </p>
+                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/JessyMangat/musical-weather-app"
+                        class="cta">View Repo</a>
+                </div>
     </section>
     <section id="skills_section" class="skills_section">
         <h1 class="section-title">Skills</h1>
