--- a/index.html
+++ b/index.html
@@ -77,12 +77,23 @@
                     <img src="Images/weather-screenshot.jpg" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
-                    <h6>REACT.JS | BOOTSTRAP | DARKSKY API | GOOGLE PLACES API</h6>
+                    <h6>REACT | BOOTSTRAP | DARKSKY API | GOOGLE PLACES API</h6>
                     <h1>React Musical Weather App</h1>
                     <p>Weather app that will play music dependant on the weather. It uses the darksky weather api as well as the Google places API. API changes have caused the app to not function correctly. A fix is currently underway and should be deployed in a few days. </p>
                     <a target="_blank" rel="noopener noreferrer" href="https://github.com/JessyMangat/musical-weather-app"
                         class="cta">View Repo</a>
                 </div>
+                <div class="portfolio-item odd-item">
+                    <div class="portfolio-description">
+                        <h6>REACT</h6>
+                        <h1>Hatchways Assessment</h1>
+                        <p>Frontend assessment completed to show proficiency in React. App will make an API call to an API provided by Hatchways. The app allows the user to search via name and tag. Tags can be added to each individual profile.  </p>
+                        <a target="_blank" rel="noopener noreferrer" href="https://reverent-jackson-7d9a51.netlify.app/" class="cta">View Demo</a>
+                    </div>
+                    </div>
+                    <div class="portfolio-img">
+                        <img src="Images/hatchways-screenshot.png" alt="project screenshot" />
+                    </div>
     </section>
     <section id="skills_section" class="skills_section">
         <h1 class="section-title">Skills</h1>
