--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img">
-                    <img src="Images/weather-screenshot.jpg" alt="project screenshot" />
+                    <img src="Images/videochat-screenshot.png" alt="project screenshot" />
                 </div>
                 <div class="portfolio-description">
-                    <h6>REACT | BOOTSTRAP | DARKSKY API | GOOGLE PLACES API</h6>
-                    <h1>React Musical Weather App</h1>
-                    <p>Weather app that will play music dependant on the weather. It uses the darksky weather api as well as the Google places API. API changes have caused the app to not function correctly. A fix is currently underway and should be deployed in a few days. </p>
-                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/JessyMangat/musical-weather-app"
-                        class="cta">View Repo</a>
+                    <h6>REACT | OPENTOK</h6>
+                    <h1>React Video Chat </h1>
+                    <p>Video chat app that allows users to video conference. Site allows sharing of audio, video, and your screen.  </p>
+                    <a target="_blank" rel="noopener noreferrer" href="https://videochat.jessymangat.com"
+                        class="cta">View Demo</a>
                 </div>
             </div>
                 <div class="portfolio-item odd-item">
